[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/world.png" type="Texture" id=1]
[ext_resource path="res://scripts/World.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/03_Stage Theme.mp3" type="AudioStream" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Brick.tscn" type="PackedScene" id=5]

[node name="World" type="Node2D"]
script = ExtResource( 2 )
BrickScene = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 24 )
texture = ExtResource( 1 )
centered = false

[node name="BreakContainer" type="Node2D" parent="."]

[node name="CollisionContainer" type="Node2D" parent="."]
position = Vector2( 0, -1 )

[node name="PositionContainer" type="Node2D" parent="."]

[node name="Position0" type="Position2D" parent="PositionContainer"]
position = Vector2( 40, 64 )

[node name="Position1" type="Position2D" parent="PositionContainer"]
position = Vector2( 40, 96 )

[node name="Position2" type="Position2D" parent="PositionContainer"]
position = Vector2( 40, 128 )

[node name="Position3" type="Position2D" parent="PositionContainer"]
position = Vector2( 40, 160 )

[node name="Position4" type="Position2D" parent="PositionContainer"]
position = Vector2( 40, 192 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="GameTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
